--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "debug": "~2.2.0",
     "dotenv": "^2.0.0",
     "express": "~4.13.4",
+    "express-validator": "^2.21.0",
     "hbs": "~4.0.0",
     "knex": "^0.12.6",
     "morgan": "~1.7.0",
