--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-validator": "^2.21.0",
     "hbs": "~4.0.0",
     "knex": "^0.12.6",
+    "method-override": "^2.3.6",
     "morgan": "~1.7.0",
     "node-sass-middleware": "0.8.0",
     "pg": "^6.1.0",
